# nnfusion

./: Dockerfile
artifacts/FractalTensor/: CMakeLists.txt  Makefile  README.md  requirements.txt
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/: README.md
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/fractaltensor/: CMakeLists.txt  Makefile  access_ops.h  access_ops_kernels.cuh  bigbird_bench.cu  run.sh
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/pytorch/: attention.py  main.py  process.py  utils.py
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/pytorch/figures/: attention.pptx  bar_plot.m  bigbird_compute_vs_noncompute.tsv  compute_kernels.tsv  noncompute_kernels.tsv  plot.ipynb
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/triton/: main.py
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/triton/op/: __init__.py  global_qk.py  global_softmax.py  global_wv.py  sparse_qk.py  sparse_softmax.py  sparse_wv.py
artifacts/FractalTensor/benchmarks/blocked_sparse_attention/tvm/: bigbird_tvm.py  branch_on_reduce_axis.py  test_tvm.py
artifacts/FractalTensor/benchmarks/fused_two_hgemms/: README.md
artifacts/FractalTensor/benchmarks/fused_two_hgemms/baseline/jax/: fused_two_hgemms.py
artifacts/FractalTensor/benchmarks/fused_two_hgemms/baseline/triton/: fused_two_hgemms.py
artifacts/FractalTensor/benchmarks/fused_two_hgemms/fractaltensor/: CMakeLists.txt  Makefile  fused_two_hgemms.cu
artifacts/FractalTensor/benchmarks/multi-head_attention/: README.md
artifacts/FractalTensor/benchmarks/multi-head_attention/baseline/: README.md  run.sh  test_pt_model.py  test_tf_model.py  test_triton_model.py  test_tvm.py
artifacts/FractalTensor/benchmarks/multi-head_attention/fractaltensor/: CMakeLists.txt  Makefile  flash_attn.cu  kernel.h  main.cu
artifacts/FractalTensor/benchmarks/rnn/baselines/: README.md
artifacts/FractalTensor/benchmarks/rnn/baselines/figures/: figures.pptx
artifacts/FractalTensor/benchmarks/rnn/cuDNN/: CMakeLists.txt  Makefile  README.md  RNN_example.h  fp16_emu.h  lstm_cell_cudnn.cu  main.cu  stacked_lstm_cudnn.cu  utils.h
artifacts/FractalTensor/benchmarks/rnn/fractaltensor/: utils.h
artifacts/FractalTensor/benchmarks/rnn/tvm/: CMakeLists.txt  README.md  codegen.py  lstm.py  lstm_tvm_tuned.py  main.cc  utils.py
artifacts/FractalTensor/cmake/: generic.cmake  python.cmake  third_party.cmake
artifacts/FractalTensor/cmake/Modules/: FindCuDNN.cmake  FindMKL.cmake
artifacts/FractalTensor/docs/: README.md  index_related_operation_and_list_comprehensions.md  primitive_types.md  tensor_operations.md  user_defined_types.md
artifacts/FractalTensor/docs/fractaltensor_operations/: access_multiple_fractaltensors.md  access_primitives.md  extended_access_operations.md  information_query.md  memory_layout_of_fractaltensor.md  memory_operations.md  parallel_functions_on_fractaltensor.md
artifacts/FractalTensor/examples/: README.md
artifacts/FractalTensor/examples/convolution/: convolution.py  utils.py
artifacts/FractalTensor/examples/dilated_rnn/: dilated_rnn.py
artifacts/FractalTensor/examples/flash_attention/: README.md  flash_attention.py  flash_attention_utils.py
artifacts/FractalTensor/examples/grid_rnn/: grid_rnn.py  grid_rnn_utils.py
artifacts/FractalTensor/examples/hello_world/: hello_world.py  utils.py
artifacts/FractalTensor/examples/rnn_attention/: rnn_attention.py  rnn_attention_utils.py
artifacts/FractalTensor/examples/sparse_attention/: README.md  bigbird.py  sparse_attention.py  sparse_attention_utils.py  torch_windowed_attention_demo.py
artifacts/FractalTensor/examples/stacked_rnn/: rnn_utils.py  stacked_lstm1.py  stacked_rnn.py
artifacts/FractalTensor/examples/transformer/: README.md  multi-head-attention.py  transformer.py  transformer_utils.py
artifacts/FractalTensor/examples/transformer/figures/: attention.pptx
artifacts/FractalTensor/examples/utils/: data_utils.py
artifacts/FractalTensor/kaleido/: __init__.py
artifacts/FractalTensor/kaleido/core/: CMakeLists.txt  allocator.h  config.h  cuda_allocator.h  data_types.proto  fractal_tensor.cc  fractal_tensor.h  init.cc  layout.h  place.cc  place.h  tensor.cc  tensor.h  tensor_shape.cc  tensor_shape.h  tile_shape.h  types.cc  types.h
artifacts/FractalTensor/kaleido/core/device/: cuda_info.cc  cuda_info.h  cuda_timer.h  cuda_utils.h  device_context.h  gpu_context.cc  gpu_context.h  traits_base.h
artifacts/FractalTensor/kaleido/core/operators/: CMakeLists.txt  concat_op.cu  concat_op.h  elementwise_op.cu  elementwise_op.h  expect_eq_op.cu  expect_eq_op.h  fill_op.cu  fill_op.h  gather_nd_op.cu  gather_nd_op.h  gemm_batched_op.cu  gemm_batched_op.h  launch_config.h  matmul_op.cu  matmul_op.h  online_softmax_op.cu  online_softmax_op.h  print_op.cu  print_op.h  scatter_nd_op.cu  scatter_nd_op.h  softmax_op.cu  softmax_op.h  transpose_op.cu  transpose_op.h
artifacts/FractalTensor/kaleido/core/tests/: CMakeLists.txt  test_allocator.cc  test_cuda_info.cc  test_layout.cc  test_main.cc  test_tensor_and_fractaltensor.cc
artifacts/FractalTensor/kaleido/frontend/: __init__.py  fractal_tensor.py  tensor.py  types.py
artifacts/FractalTensor/kaleido/frontend/operations/: __init__.py  base.py  conversion.py
artifacts/FractalTensor/kaleido/frontend/tests/: context.py  test_fractaltensor_creation.py  test_type_equivalence.py
artifacts/FractalTensor/kaleido/parser/: __init__.py  ast_visitor.py  context.py  errors.py  ir_nodes.py  plot.py
artifacts/FractalTensor/kaleido/parser/operations/: access_patterns.py  common.py  tensor_primitives.py
artifacts/FractalTensor/kaleido/parser/tests/: context.py  test_assignment.py  test_function_def.py  test_lambda_with_udf.py  utils.py
artifacts/FractalTensor/scripts/: cpp_format.sh
artifacts/FractalTensor/scripts/benchmarks/: bench.sh
artifacts/FractalTensor/scripts/benchmarks/stacked_lstm/: lstm_cell_bench.sh  stacked_lstm_bench.sh
artifacts/FractalTensor/scripts/tests/: backend_unit_tests.sh  frontend_examples.sh  frontend_unit_tests.sh
(+263 files in other folders)
